# Crime-qwen-

./: .env.example  .gitignore  Prompt.txt  README.ar.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  core.py  deps.py  main.py
backend/app/api/: admin.py  audit_api.py  auth.py  cases.py  files.py  media.py  photo_qa.py  reports.py  results.py  review.py  runs.py  videosearch.py
backend/app/auth/: seed.py  session.py
backend/app/db/: engine.py  models.py
backend/app/modelclient/: budget.py  client.py  mock.py  presets.py
backend/app/pipeline/: ctx.py  grounding.py  progress.py  worker.py
backend/app/prompts/: 00_common_rules.md  10_triage.md  20_detect.md  21_detect_human_addendum.md  22_box_refine.md  23_ground.md  24_box_feedback.md  30_aggregate.md  40_compare.md  50_narrative_exec.md  51_narrative_timeline.md  52_narrative_spatial.md  53_narrative_review.md  54_narrative_recommendations.md  55_narrative_per_source.md  60_repair.md  70_photo_qa.md  71_video_verify.md  90_calibration.md  91_eval_grounding.md  (+7 more)
backend/eval/: LOG.md  REPORT.md  REPORT_30B.md  REPORT_ROUND2.md  build_weapons_gt.py  crop_verify.py  dataset.py  eval_detect.py  ground_eval.py  measure_weapons.py  run_eval.py  score.py
backend/scripts/: analyze_user_photo.py  demo_cases.py  diagnose_media.py  export_reports.py  list_cases.py  live_smoke.py  make_samples.py  proof_boxes.py  real_weapons_case.py  render_knives.py  run_status.py  seed_demo.py  test_photo_mode.py  video_search_eval.py
backend/tests/: conftest.py
(+94 files in other folders)
