[project]
name = "athar-backend"
version = "0.1.0"
description = "أثر — Crime Scene AI Analysis backend (FastAPI + Qwen3-VL)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sse-starlette>=2.1",
    "tenacity>=9.0",
    "openai>=1.60",
    "pillow>=11.0",
    "imagehash>=4.3",
    "scenedetect>=0.7",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "weasyprint>=69.0",
    "docxtpl>=0.20",
    "python-docx>=1.2",
    "jinja2>=3.1",
    "hijridate>=2.6",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "filetype>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "pypdf>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
